--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "blazewebart",
     "displayName": "BlazeWebArt",
     "description": "BlazeWebArt.pro - Theme, pleasure for the eyes, for Php, Js, Html, Css, Txt",
-    "publisher": "BlazeWebArt.pro",
+    "publisher": "blazewebart",
     "author": {
         "name": "Konstantin Kotlyarov"
     },
